# Inter-IIT-2025

./: README.md
src/ROSArduinoBridge_updated/: ROSArduinoBridge_updated.ino  diff_controller.h  encoder_driver.h  encoder_driver.ino  motor_driver.h  motor_driver.ino
src/articubot_one/: CMakeLists.txt
src/articubot_one/config/: ekf.yaml  my_controllers.yaml  nav2_params.yaml
src/articubot_one/description/: depth_camera.xacro  robot_core.xacro
src/articubot_one/launch/: joystick.launch.py  launch_robot.launch.py  navigation_3d.launch.py  realsense.launch.py  realsense_d435i_color.launch.py  robot_mapping_demo.launch.py  rs_launch.py
src/diffdrive_arduino/description/ros2_control/: diffbot.ros2_control.xacro
src/hw_bot/: CMakeLists.txt  package.xml
src/hw_bot/config/: dummy.yaml  my_controllers.yaml  nav2_modified_by_me.yaml  nav2_params.yaml  nav2_params_rgbd.yaml  nav2_working.yaml  param.yaml
src/hw_bot/description/: materials.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  temp.urdf
src/hw_bot/launch/: joystick.launch.py  laserscan.launch.py  launch_robot.launch.py  localization_launch.py  navigation_3d.launch.py  navigation_launch.py  realsense.launch.py  realsense_d435i_color.launch.py  rsp.launch.py  rtabmap_sim.launch.py  using_the_map.launch.py
src/hw_bot/maps/: rs_map2.pgm  rs_map2.yaml
src/hw_bot/scripts/: hari_script.py  nav2_script.py  nav2_single_goal.py  nav2_waypoint_with_poses.py  nav_waypoints_cli_esp32.py  send_goal.py  send_wheel.py
src/qr_scanner/: cleaned_csv.py  cleaned_data.csv  code.py  logged_data.csv  python_wali.py  qr_scanning.py
src/wh_bot/: CMakeLists.txt  package.xml
src/wh_bot/config/: ekf.yaml  gz_bridge.yaml  my_controllers.yaml  navigation.yaml  navigation_3d.yaml  slam_toolbox_localization.yaml  slam_toolbox_mapping.yaml  twist_mux.yaml
src/wh_bot/description/: camera.xacro  depth_camera.xacro  final_before.xacro  final_urdf.xacro  gz.xacro  robot.urdf.xacro  ros2_control.xacro  temp.urdf
src/wh_bot/launch/: 3d_depth_mapping_rtab.launch.py  launch_robot.launch.py  launch_sim.launch.py  navigation.launch.py  navigation_3d.launch.py  rsp.launch.py  rtabmap_sim.launch.py
src/wh_bot/meshes/tirth_bot/: base_link.stl  body_1.stl  camera_mount_1.stl  castor_wheel_1_1.stl  castor_wheel_2_1.stl  castor_wheel_3_1.stl  castor_wheel_4_1.stl  mount_rod_1.stl  vertical_rod_for_camera_mount_v1_1.stl  wheel1_1.stl  wheel2_1.stl
src/wh_bot/scripts/: lift_bridge.py  lift_controller.py  qrscan.py  send_goal.py  take_picture.py
src/wh_bot/worlds/: empty_new.world
